# -

--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/: CMakeLists.txt  LICENSE  README.md  vcpkg.json
--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/docs/: Build.md  EDR_Engine_Decision_Record.md
--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/include/core/: page_cache.h  render_pipeline.h  selection_manager.h  viewport_manager.h
--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/include/diagnostics/: logger.h
--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/include/formats/: djvu_plugin.h  format_registry.h
--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/include/ocr/: ocr_pipeline.h
--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/include/print/: print_manager.h
--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/include/ui/: home_screen.h  main_window.h  ribbon_controller.h  side_panel.h  status_bar.h  tab_manager.h  theme_manager.h
--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/include/utils/: image_utils.h
--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/resources/: DocVision.manifest
--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/scripts/: build.bat  build.ps1
--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/src/: main.cpp
--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/src/core/: document.cpp  navigation_history.cpp  page_cache.cpp
--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/src/diagnostics/: logger.cpp
--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/src/formats/: epub_plugin.cpp  format_registry.cpp  pdf_plugin.cpp
--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/src/ocr/: ocr_engine.cpp
--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/src/ui/: hotkey_manager.cpp  pages_overview.cpp  side_panel.cpp  tab_manager.cpp  theme_manager.cpp
--codex-create-windows-installer-script/--codex-create-windows-installer-script/G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/src/utils/: file_utils.cpp  string_utils.cpp
.github/workflows/: main.yml  windows-installer.yml
G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/.github/workflows/: windows-installer.yml
G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/docs/: Architecture.md  Build.md
G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/include/annotations/: annotation_manager.h  annotation_renderer.h
G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/include/core/: config_manager.h  document.h  navigation_history.h
G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/include/diagnostics/: crash_handler.h
G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/include/formats/: cbz_plugin.h  epub_plugin.h  pdf_plugin.h
G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/include/ocr/: ocr_engine.h  ocr_index.h
G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/include/search/: search_engine.h
G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/include/ui/: command_manager.h  command_palette.h  hotkey_manager.h  pages_overview.h
G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/include/utils/: file_utils.h  string_utils.h
G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/installer/: docvision.iss
G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/resources/: DocVision.rc  default_hotkeys.json  default_settings.json
G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/scripts/: generate_icon.py
G-claude-offline-document-viewer-LMq8A (5) (1)/G-claude-offline-document-viewer-LMq8A/src/annotations/: annotation_manager.cpp
workflows/: windows-installer.yml
(+20 files in other folders)
